--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+hydra-core = "^1.2.0"
+PyYAML = "^6.0"
+pathlib = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
