--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pytest = "^5.2"
 hydra-core = "^1.2.0"
 PyYAML = "^6.0"
 pathlib = "^1.0.1"
+requests = "^2.27.1"
+pandas = "^1.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
