--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ftx-bot"
+name = "tradingBot"
 version = "0.1.0"
 description = ""
 authors = ["drlux <sorrentino.luca@outlook.com>"]
@@ -13,6 +13,10 @@ pathlib = "^1.0.1"
 requests = "^2.27.1"
 pandas = "^1.4.2"
 plotly = "^5.8.0"
+colorama = "^0.4.4"
+telegram-send = "^0.34"
+Pillow = "^9.1.1"
+kaleido = "0.2.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -23,6 +27,10 @@ pathlib = "^1.0.1"
 requests = "^2.27.1"
 pandas = "^1.4.2"
 plotly = "^5.8.0"
+Pillow = "^9.1.1"
+kaleido = "^0.2.1"
+traitlets = "^5.2.1"
+pickleshare = "^0.7.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
