update default config

--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -1,8 +1,3 @@
-prm_dict:
-  prova: 1
-  sub1:
-  - primo
-  - secondo
-sec_dict:
-  prova: 2
-  sub1: secondo
+ftx_client:
+  key             :  your-key
+  secret          :  your-secret
