--- a/framework/dockerfile
+++ b/framework/dockerfile
@@ -20,11 +20,10 @@ RUN apt-get install -y build-essential checkinstall
 RUN apt install -y python3
 RUN apt-get -y install python3-pip
 
-#RUN python -m pip install -U pip
-#RUN pip install poetry
+#RUN python3 -m pip install -U pip
+RUN pip install poetry
 
-CMD ["/bin/bash"]
-#CMD ["poetry", "build"] 
+#CMD ["/bin/bash"]
+CMD ["poetry", "build"] 
 
 
-#docker run --rm -it -t -v /home/drlux/Desktop/follower/tradingBot:/media/reference  raspychaser
